css/styles.css
html, body{
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: baseline;
  background-color: #ebebeb;
}

header{
  width: 100%;
  background: #bdbdbd;
  position: fixed;
  z-index: 10;
  top: 0;
}

#header-content ul.topnav {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
}

#header-content ul.topnav li {float: left;}

#header-content ul.topnav li a {
  display: inline-block;
  color: #f2f2f2;
  text-align: center;
  padding: 18px 16px;
  text-decoration: none;
  transition: 0.3s;
  font-size: 17px;
  font-family: "Helvetica", Helvetica, Arial;
}

#header-content ul.topnav .dropbtn {
    display: inline-block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

#header-content ul.topnav li a:hover, .dropdown:hover .dropbtn {
    background-color: #555;
}

#header-content ul.topnav li.dropdown {
    display: inline-block;
}

#header-content ul.topnav .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

#header-content ul.topnav .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

#header-content ul.topnav .dropdown-content a:hover {background-color: #f1f1f1}

#header-content ul.topnav .dropdown:hover .dropdown-content {
    display: block;
}


#banner{
  width: 100%;
  height: 900px;
  position: fixed;
  top: 40px;
  background: #707070;
}
  #banner a {
    width: 100%;
    height: 100%;
  }

#content {
  width: 100%;
  position: relative;
  top: 800px;
  background: #ebebeb;
  height: 1500px;
}

#content h1 {
  font-family: "Helvetica", Helvetica, Arial;
  font-size: 50px;
  text-align: center;
  color: #555;
}

#mainPage {
  width: 100%;
  top: 10px;
  background: #ebebeb;
  height: 2500px;
}

#mainPage #p {
  font-size: 40px;
  font-family: Arial;
  color: white;
}

#champions {
  list-style-type: none;
  height: 100%;
  background: #ebebeb;
}

#champions ul{
  list-style-type: none;
}

#champions ul li {float: left;}

#champions ul li a {
    float: left;
    margin: 15px;
}

#test {
  font-size: 40px;
  font-family: Arial;
  color: white;
  text-align: center;
}

.contactInfo{
  top: auto;
  height: 100%;
}

.contactInfo #page {
  font-size: 40px;
  font-family: Helvetica, Arial;
  color: white;
  text-align: center;
  height: 600px;
  position: relative;
  top: 50%;
}

.contactInfo #page h1 {
  position: relative;
  top: 35%;
  text-align: center;
}

